packages/svelte/tests/validator/samples/declaration-tag-invalid-function/input.svelte
{#if true}
	{function foo() {}}
{/if}
