packages/svelte/tests/compiler-errors/samples/snippet-rest-args/main.svelte
{#snippet children(...args)}
	{args}
{/snippet}
